# proptest-lockstep

./: .gitignore  CHANGELOG.md  CLAUDE.md  CORRESPONDENCE.md  Cargo.toml  LICENSE-APACHE  PAPERS.md  README.md
.github/workflows/: ci.yml
benches/: end_to_end.rs  linearizability.rs
blog_posts/: INTRODUCING_PROPTEST_LOCKSTEP.md
examples/: batched_log.rs  bounded_channel.rs  bug_detection.rs  certified_synthesis.rs  commutativity_spec.rs  compositional_test.rs  concurrent_counter.rs  coverage_guided.rs  crash_recovery_log.rs  crdt_counter.rs  crdts_library.rs  crossbeam_queue.rs  dashmap_test.rs  differential_bridge.rs  effect_commutativity.rs  eventual_cache.rs  evmap_test.rs  file_system.rs  file_system_derived.rs  fs_concurrent.rs  guided_shrinking.rs  kv_concurrent.rs  kv_store.rs  lru_cache.rs  refinement_contract.rs  scc_hashmap.rs  session_kv.rs  sled_crash_recovery.rs  treiber_stack.rs
formal_verification/: ADVERSARIAL_CRITIQUE_ASSESSMENT.md  FormalVerification.lean  PAPER_DRAFT.md  PROTOTYPE_CALCULUS.md  PROTOTYPE_CALCULUS_ROUND2.md  PROTOTYPE_CALCULUS_ROUND3.md  PROTOTYPE_CALCULUS_ROUND5.md  RESEARCH_CRITIC_REVIEW.md  RESEARCH_CRITIC_REVIEW_ROUND2.md  RESEARCH_CRITIC_REVIEW_ROUND3.md  RESEARCH_CRITIC_REVIEW_ROUND5.md  RESEARCH_DIRECTIONS.md  RESEARCH_IDEATION.md  RESEARCH_IDEATION_ROUND2.md  RESEARCH_IDEATION_ROUND3.md  RESEARCH_IDEATION_ROUND5.md  REVIEW.md  REVIEW_ROUND10_ADVERSARIAL.md  REVIEW_ROUND11_FINAL.md  REVIEW_ROUND2.md  REVIEW_ROUND3.md  REVIEW_ROUND4_FINAL.md  REVIEW_ROUND5_FINAL.md  REVIEW_ROUND6_ADVERSARIAL.md  REVIEW_ROUND6_DEFINITIVE.md  REVIEW_ROUND7_ADVERSARIAL.md  REVIEW_ROUND8_ADVERSARIAL.md  REVIEW_ROUND9_ADVERSARIAL.md  TYPE_THEORY_ANALYSIS.md  TYPE_THEORY_ANALYSIS_ROUND2.md  TYPE_THEORY_ANALYSIS_ROUND3.md  TYPE_THEORY_ANALYSIS_ROUND5.md  lake-manifest.json  lakefile.toml
formal_verification/FormalVerification/: Bridge.lean  BridgeDepth.lean  BridgeRefinement.lean  CertificateHash.lean  CertifiedSynthesis.lean  CommutativitySpec.lean  Compositional.lean  CrashLinearizability.lean  CrashRecovery.lean  CrashSessionObs.lean  DPOR.lean  DeriveBridge.lean  DerivedBridge.lean  EffectLattice.lean  Environment.lean  EnvironmentExtensions.lean  EventualConsistency.lean  GameSemantics.lean  HierarchyStrictness.lean  Invariant.lean  Linearizability.lean  Lockstep.lean  ObservationalRefinement.lean  OpaqueDetection.lean  PolynomialBridge.lean  Precondition.lean  (+7 more)
metatheory/: Metatheory.lean  lake-manifest.json  lakefile.toml
papers/: icfp-pearl-draft.md  issta-real-crates-draft.md  oopsla-tool-track-draft.md  osdi-crash-recovery-draft.md  popl-three-characterizations-draft.md
proptest-lockstep-derive/: Cargo.toml
proptest-lockstep-derive/src/: lib.rs
src/: action.rs  async_support.rs  bridge.rs  certified.rs  classify.rs  commutativity.rs  compositional.rs  concurrent.rs  contracts.rs  coverage.rs  crash_recovery.rs  depth.rs  differential.rs  effects.rs  env.rs  eventual.rs  gvar.rs  invariant.rs  lib.rs  model.rs  op.rs  phase.rs  regression.rs  runner.rs  session.rs  shrinking.rs  tensor.rs  theory.rs  witness.rs
tests/: proc_macro_properties.rs
(+43 files in other folders)
