[workspace]
members = [".", "proptest-lockstep-derive"]

[package]
name = "proptest-lockstep"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "Lockstep-style stateful property testing for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshburgess/proptest-lockstep"
readme = "README.md"
keywords = ["proptest", "property-testing", "stateful", "lockstep", "model-checking"]
categories = ["development-tools::testing"]

[dependencies]
proptest = "1"
proptest-state-machine = "0.3"
dyn-clone = "1"
shuttle = { version = "0.8", optional = true }
loom = { version = "0.7", optional = true }
async-trait = { version = "0.1", optional = true }

proptest-lockstep-derive = { version = "0.1.0", path = "proptest-lockstep-derive", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-queue = "0.3"
scc = "2"
dashmap = "6"
evmap = "10"
crdts = "7"
num-traits = "0.2"
trybuild = "1"
sled = "0.34"

[[bench]]
name = "linearizability"
harness = false
required-features = ["concurrent"]

[[bench]]
name = "end_to_end"
harness = false

[features]
default = ["derive"]
derive = ["dep:proptest-lockstep-derive"]
concurrent = ["shuttle"]
concurrent-loom = ["loom"]
async = ["async-trait"]

# `concurrent` and `concurrent-loom` are mutually exclusive: they instrument
# `std::sync` in incompatible ways, and the loom entry points need stricter
# `Sync` bounds than the shuttle path provides. Pick one per build.

[package.metadata.docs.rs]
features = ["derive", "concurrent", "async"]
rustdoc-args = ["--cfg", "docsrs"]
