[package]
name = "proptest-lockstep-derive"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
description = "Proc macros for proptest-lockstep"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
